--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,5 +1,5 @@
 #连接数据库的url路径
-jdbc.dbcp.fh.url=jdbc:mysql://localhost:3306/yanyuanorder?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/yanyuanorder?useUnicode=true&characterEncoding=UTF-8
 #驱动名
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=root
