添加上传图片功能

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,8 +13,8 @@ log4j.appender.logDB.Threshold = WARN
 log4j.appender.logDB = org.apache.log4j.jdbc.JDBCAppender
 log4j.appender.logDB.layout = org.apache.log4j.PatternLayout
 log4j.appender.logDB.Driver = com.mysql.jdbc.Driver
-log4j.appender.logDB.URL = jdbc:mysql://localhost:3306/yanyuanorder
+log4j.appender.logDB.URL = jdbc:mysql://49.232.44.19:3306/yanyuanorder
 log4j.appender.logDB.User = root
-log4j.appender.logDB.Password =
+log4j.appender.logDB.Password = 1514
 log4j.appender.logDB.Sql = INSERT INTO t_log4j(project_name,create_date,line,message)values('movie','%d{yyyy-MM-dd HH:mm:ss}','%L','%m')
 
