--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,8 +1,8 @@
 #连接数据库的url路径
-jdbc.url=jdbc:mysql://localhost:3306/yanyuanorder?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://49.232.44.19:3306/yanyuanorder?useUnicode=true&characterEncoding=UTF-8
 #驱动名
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=root
-jdbc.password=
+jdbc.password=1514
 jdbc.maxActive=200
 jdbc.maxWait=500
