修复图片上传，更新数据库

--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -2,7 +2,7 @@
 jdbc.url=jdbc:mysql://49.232.44.19:3306/yanyuanorder?useUnicode=true&characterEncoding=UTF-8
 #驱动名
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.username=root
+jdbc.username=yanyuanorder
 jdbc.password=1514
 jdbc.maxActive=200
 jdbc.maxWait=500
